samples/_failures_safe/1761268912_de8954_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71de521b.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_71de521b.c:155:36: error: expected ‘)’ at end of input
  155 |             if (result < 0 && right
      |                ~                   ^
      |                                    )
./samples/SAFE/__tmp_71de521b.c:155:13: error: expected declaration or statement at end of input
  155 |             if (result < 0 && right
      |             ^~
./samples/SAFE/__tmp_71de521b.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71de521b.c:155:13: error: expected declaration or statement at end of input
